--- a/council_finance/templates/council_finance/council_detail.html
+++ b/council_finance/templates/council_finance/council_detail.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% block title %}{{ council.name }} - Council Finance Counters{% endblock %}
 {% block content %}
-<h1 class="text-3xl sm:text-4xl font-extrabold mb-4 text-center p-5">
+<h1 class="text-3xl sm:text-4xl font-extrabold mb-4 text-center p-5 flex items-center justify-center gap-2">
+  <span class="w-8 h-8 bg-gray-300 rounded-full"></span>
   {{ council.name }}
 </h1>
 <div class="mb-4 border-b text-center">
@@ -65,6 +66,7 @@
     {% endif %}
   {% endif %}
 </div>
+{% if tab != 'edit' %}
 <div class="mt-2 flex flex-col sm:flex-row items-center gap-4 justify-between">
   <div class="flex-1 flex items-center">
     <label for="year-select" class="sr-only">Financial year</label>
@@ -403,6 +405,7 @@ toggleBtn.addEventListener('click', () => {
 });
 
 </script>
+{% endif %}
 {% endif %}
 <!-- TODO: Add a buttons for JSON and XLS/CSV exports of all data for this council for the selected financial year -->
 {% if figures %}
