--- a/templates/registration/notifications.html
+++ b/templates/registration/notifications.html
@@ -18,7 +18,7 @@
   <tbody>
   {% for note in notifications %}
     <tr class="border-b {% if not note.read %}bg-gray-50{% endif %}">
-      <td class="px-4 py-2">{{ note.message }}</td>
+      <td class="px-4 py-2">{{ note.message|safe }}</td>
       <td class="px-4 py-2 text-sm text-gray-600">{{ note.created|date:"Y-m-d H:i" }}</td>
       <td class="px-4 py-2 text-right">
         {% if not note.read %}
