--- a/templates/base.html
+++ b/templates/base.html
@@ -156,6 +156,17 @@
     }
     </script>
 
+    {# Display one-off messages generated via Django's messages framework. #}
+    {% if messages %}
+    <div class="max-w-7xl mx-auto p-4" id="message-area">
+        {% for message in messages %}
+        <div class="mb-2 p-2 bg-blue-50 border border-blue-300 text-blue-900 rounded">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <main class="flex-1 max-w-7xl mx-auto p-4">
         {% block content %}{% endblock %}
     </main>
