--- a/council_finance/templates/council_finance/counter_definition_list.html
+++ b/council_finance/templates/council_finance/counter_definition_list.html
@@ -13,6 +13,7 @@
             <th class="border px-2 py-1">Slug</th>
             <th class="border px-2 py-1">Duration</th>
             <th class="border px-2 py-1">Default?</th>
+            <th class="border px-2 py-1">Headline?</th>
             <th class="border px-2 py-1">Actions</th>
         </tr>
     </thead>
@@ -23,6 +24,7 @@
             <td class="border px-2 py-1 text-center">{{ counter.slug }}</td>
             <td class="border px-2 py-1 text-center">{{ counter.duration }}</td>
             <td class="border px-2 py-1 text-center">{% if counter.show_by_default %}Yes{% else %}No{% endif %}</td>
+            <td class="border px-2 py-1 text-center">{% if counter.headline %}Yes{% else %}No{% endif %}</td>
             <td class="border px-2 py-1 text-center"><a href="{% url 'counter_edit' counter.slug %}" class="text-blue-600 underline">Edit</a></td>
         </tr>
         {% empty %}
