Add council type filtering for counters and capabilities

--- a/council_finance/templates/council_finance/counter_definition_form.html
+++ b/council_finance/templates/council_finance/counter_definition_form.html
@@ -87,6 +87,10 @@
                     {{ form.headline.errors }}
                 </td>
             </tr>
+            <tr class="odd:bg-gray-50">
+                <th class="text-left p-2 border">{{ form.council_types.label_tag }}</th>
+                <td class="p-2 border">{{ form.council_types }} {{ form.council_types.errors }}</td>
+            </tr>
         </tbody>
     </table>
 <div class="mt-2 p-2 bg-gray-50 rounded" id="preview-card">
