--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                 </div>
             {% endif %}
         </div>
-        {% if user.is_staff or user.is_superuser %}
+        {% if user.is_superuser or user.profile.tier.level|default:0 >= 4 %}
         {# Secondary navigation bar for admin-only links #}
         <div class="bg-gray-700 p-3">
             <nav class="max-w-7xl mx-auto flex gap-4 p-2 pl-5">
